On reste pertinants les reufs

--- a/front/index.html
+++ b/front/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>T'as t'as t'as t'as modifié le fichier index</p>
+    <p>Mdrrrr j'avais même pas pensé à parler de vélo</p>
 </body>
 </html>
